# Scav

./: .flaskenv  .gitignore  .pre-commit-config.yaml  Procfile  README.md  conectores.py  objetos.py  operador.py  processadores.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
app/: __init__.py  config.py  extensions.py  filtros_jinja.py  make_celery.py
app/blueprints/: __init__.py
app/blueprints/cnpj/: __init__.py  blueprint.py  cnpj.py  cnpj_front.py
app/blueprints/download/: __init__.py  auxiliares.py  blueprint.py  download.py  operador.py  planilha.py  planillha.py
app/blueprints/home/: __init__.py  blueprint.py  home.py
app/bp/: __init__.py
app/bp/cnpj/: blueprint.py  cnpj.py
app/bp/componentes/: blueprint.py  componentes.py
app/bp/components/: blueprint.py  components.py
app/bp/download/: blueprint.py  download.py
app/bp/home/: blueprint.py  home.py
app/bp/login/: blueprint.py  login.py
app/conectores/: conectores.py
app/ext/api/: conectores.py
app/ext/db/: db.py  filtros.py  models.py  models_old.py
app/ext/fila/: __init__.py
app/ext/jinja/: __init__.py  config.py  filtros.py
app/funcionalidades/: frontend.py  operador.py  processadores.py
app/funcs/: api.py  auxiliares.py  pagina.py  planillha.py
app/modelos/: objetos.py
app/objetos/: classes_de_dados.py  mappers.py  requisição.py  variaveis.py
app/rotas/: __init__.py  cnpj.py  home.py  rotas.py
resources/templates/: cnpj.html  index.html
static/: planilha.xlsx
static/css/: cnpj.css  home.css
static/js/: checkout.js  data.js  home.js  inputs.js
(+104 files in other folders)
