[tool.poetry]
name = "scav-cc"
version = "0.5.0"
description = "Projeto profissional de venda de dados de CNPJ, utilizado os documentos liberados pela Receita Federal."
authors = ["Thomas Passos <tm123br@live.com>"]
readme = "README.md"
packages = [{include = "scav"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-caching = "^2.3.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
unidecode = "^1.3.8"
jinja2-fragments = "^1.6.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = ['static']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.taskipy.tasks]
run = "flask run --debug"
lint = "ruff check . ; ruff check . --diff"
format = "ruff check . --fix ; ruff format ."